@@ -1,3 +1,10 @@
+2012-10-28  Borut Razem  <borutr@users.sourceforge.net>
+  * gpasm/testsuite/gpasm.mchip/asmfiles/files2.asm:
+    fixed MPASM(X) "Warning[207]: Found label after column 1." which
+    generates an error on gpasm
+  * doc/html-help/Makefile.am, doc/html-help/Makefile.in:
+    test if *.html and *.css files can be / are generated
+
 2012-10-23  Borut Razem  <borutr@users.sourceforge.net>
   * gpasm/testsuite/gpasm.mchip/asmfiles/macro1.asm,
     gpasm/testsuite/gpasm.mchip/asmfiles/macro3.asm,
